--- a/home_update3.html
+++ b/home_update3.html
@@ -65,8 +65,8 @@ $(window).scroll(function () {
 });
     </script>
 　<form id="form1" action="kinokoman.tk">
-　<input id="sbox"  id="s" name="s" type="text" placeholder="キーワードを入力" />
-　<input id="sbtn" type="submit" value="検索" />
+　<input id="sbox" input type="search"  id="s" name="s" type="text" placeholder="キーワードを入力" />
+　<input id="sbtn" input type="submit" type="submit" value="検索" />
 　</form>
   <div class="cp_navi">
   <div id="cp_sidenav" class="sidenav">
