--- a/home_update3.html
+++ b/home_update3.html
@@ -64,7 +64,7 @@ $(window).scroll(function () {
         }
 });
     </script>
-　<form id="form1" action="kinokoman.tk">
+　<form id="form1" action="kinokoman.tk/home.html">
 　<input id="sbox" input type="search"  id="s" name="s" type="text" placeholder="キーワードを入力" />
 　<input id="sbtn" input type="submit" type="submit" value="検索" />
 　</form>
