--- a/home_update3.html
+++ b/home_update3.html
@@ -64,9 +64,9 @@ $(window).scroll(function () {
         }
 });
     </script>
-　<form id="form1" action="kinokoman.tk/home.html">
-　<input id="sbox" input type="search"  id="s" name="s" type="text" placeholder="キーワードを入力" />
-　<input id="sbtn" input type="submit" type="submit" value="検索" />
+　<form action="http://www.google.co.jp/search" method="get">
+　<input type="search" name="search" placeholder="キーワードを入力”>
+　<input type="submit" name="submit" value="検索”>
 　</form>
   <div class="cp_navi">
   <div id="cp_sidenav" class="sidenav">
