--- a/home_update3.html
+++ b/home_update3.html
@@ -65,8 +65,8 @@ $(window).scroll(function () {
 });
     </script>
 　<form action="http://www.google.co.jp/search" method="get">
-　<input type="search" name="search" placeholder="キーワードを入力”>
-　<input type="submit" name="submit" value="検索”>
+　<input type="search" name="search" placeholder="キーワードを入力">
+　<input type="submit" name="submit" value="検索">
 　</form>
   <div class="cp_navi">
   <div id="cp_sidenav" class="sidenav">
