--- a/home_update3.html
+++ b/home_update3.html
@@ -64,7 +64,7 @@ $(window).scroll(function () {
         }
 });
     </script>
-　<form action="http://www.google.co.jp/search" method="post">
+　<form action="http://www.google.co.jp/search" method="get">
 　<input type="search" name="search" placeholder="キーワードを入力">
 　<input type="submit" name="submit" value="検索">
 　</form>
