--- a/home_update3.html
+++ b/home_update3.html
@@ -68,6 +68,12 @@ $(window).scroll(function () {
 　<input type="search" name="search" placeholder="キーワードを入力">
 　<input type="submit" name="submit" value="検索">
 　</form>
+  <form method=”get” action=http://www.google.co.jp/search target=”_blank”>
+  <input type=”text” name="query" size="30" maxlength="255" value="">
+  <input type=”submit” name="btn" value="検索">
+  <input type="hidden" name="hl" value="ja">
+  <input type="hidden" name="sitesearch" value="kinokoman.tk">
+  </form>
   <div class="cp_navi">
   <div id="cp_sidenav" class="sidenav">
 	<a href="#" id="home">Home</a>
