--- a/home_update3.html
+++ b/home_update3.html
@@ -64,7 +64,12 @@ $(window).scroll(function () {
         }
 });
     </script>
-　
+　<form method="get" action="http://www.google.co.jp/search" target="_blank">
+  <input type="text" name="q" size="31" maxlength="255" value="">
+  <input type="submit" name="btng" value="検索">
+  <input type="hidden" name="hl" value="ja">
+  <input type="hidden" name="sitesearch" value="web-officer.com">
+  </form>
   <div class="cp_navi">
   <div id="cp_sidenav" class="sidenav">
 	<a href="#" id="home">Home</a>
