--- a/home_update3.html
+++ b/home_update3.html
@@ -68,7 +68,7 @@ $(window).scroll(function () {
   <input type="text" name="q" size="31" maxlength="255" value="">
   <input type="submit" name="btng" value="検索">
   <input type="hidden" name="hl" value="ja">
-  <input type="hidden" name="sitesearch" value="web-officer.com">
+  <input type="hidden" name="sitesearch" value="kinokoman.tk">
   </form>
   <div class="cp_navi">
   <div id="cp_sidenav" class="sidenav">
