--- a/home_update3.html
+++ b/home_update3.html
@@ -22,7 +22,19 @@
       <li class="nav-list-item">Topic</li>
     </ul>
   </header>
-  <div class="pagetop">
+  <article>
+  <div class="side">
+     <div class="cp_navi">
+  <div id="cp_sidenav" class="sidenav">
+	<a href="#" id="home">Home</a>
+	<a href="#" id="news">News</a>
+	<a href="#" id="contact">Contact</a>
+	<a href="#" id="about">About</a>
+  </div>
+  </div>
+  </div> 
+  <div class="content">
+    <div class="pagetop">
   <a class="pagetop-btn" href="#"></a>
 　</div>
   <script type="text/javascript">
@@ -198,14 +210,10 @@ $(window).scroll(function () {
   <br>
   <p><font size="5">現在準備中…</font></p>
   <br>
-  <div class="cp_navi">
-  <div id="cp_sidenav" class="sidenav">
-	<a href="#" id="home">Home</a>
-	<a href="#" id="news">News</a>
-	<a href="#" id="contact">Contact</a>
-	<a href="#" id="about">About</a>
   </div>
-  </div>
+</article>
+  
+ 
   <footer>
 　　<ul class="footer-menu">
      <li>home ｜</li>
