--- a/home_update3.html
+++ b/home_update3.html
@@ -64,7 +64,7 @@ $(window).scroll(function () {
         }
 });
     </script>
-　
+　<div id="sample"></div>
   
   <p><font size="5">現在準備中…</font></p>
   <br>
