--- a/keisan.html
+++ b/keisan.html
@@ -64,7 +64,7 @@ $(window).scroll(function () {
         }
 });
     </script>
-　　<form method="get" action="output.html" oninput="result.value = Number(a.value) + Number(b.value);">
+　　<form method="get" action=".html" oninput="result.value = Number(a.value) + Number(b.value);">
 
 　　<p><input type="number" name="a" value="0"> + <input type="number" name="b" value="0"></p>
 
