--- a/keisan.html
+++ b/keisan.html
@@ -64,9 +64,9 @@ $(window).scroll(function () {
         }
 });
     </script>
-　　<form method="get" action="keisan.html" oninput="result.value = Number(a.value) + Number(b.value);">
+　　<form method="get" action="keisan.html" oninput="result.value = Number(a.value) + Number(10);">
 
-　　<p><input type="number" name="a" value="0"> + <input type="number" name="b" value="0"></p>
+　　<p><input type="number" name="a" value="0"></p>
 
 　　<p>計算結果：<output name="result">0</output></p>
 
