--- a/home.html
+++ b/home.html
@@ -16,10 +16,10 @@
     </h1>
     <ul class="nav-list">
       <li class="nav-list-item">
-        <a>Home</a>
+         <a href="home.html">Home</a>
       </li>
-      <li class="nav-list-item">About</li>
-      <li class="nav-list-item">Topic</li>
+      <li class="nav-list-item"> <a href="">About</a></li>
+      <li class="nav-list-item"> <a href="">Topic</a></li>
     </ul>
   </header>
   <div class="pagetop">
