--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
       <li class="nav-list-item">
          <a href="home.html">Home</a>
       </li>
-      <li class="nav-list-item"> <a href="">About</a></li>
+      <li class="nav-list-item"> <a href="about.html">About</a></li>
       <li class="nav-list-item"> <a href="">Topic</a></li>
     </ul>
   </header>
