--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
          <a href="home.html">Home</a>
       </li>
       <li class="nav-list-item"> <a href="about.html">About</a></li>
-      <li class="nav-list-item"> <a href="">Topic</a></li>
+      <li class="nav-list-item"> <a href="topic.html">Topic</a></li>
     </ul>
   </header>
   <div class="pagetop">
